# telethon-mongo-session

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/badges/: readme.py
.github/workflows/: ci.yml
scripts/: clean-backups.sh  install.sh  run-if-main-branch.sh
telethon_multimongo_session/: __init__.py  mongo_session.py
tests/: conftest.py  test_session.py
