[tool.poetry]
name = "telethon_multimongo_session"
version = "0.1.0"
description = "This is a python library for store your telethon sessions in mongodb database."
authors = ["Daniil Tolmachev <dev.tolmachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
telethon = "^1.35.0"
pymongo = "^4.7.1"
typing-extensions = "^4.11.0"
pydantic = "^2.7.1"


[tool.poetry.group.github.dependencies]
genbadge = "^1.1.1"
pre-commit = "^3.7.0"
pygount = "^1.6.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.2.0"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
defusedxml = "^0.7.1"


[tool.poetry.group.linters.dependencies]
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
